common/app/assets/stylesheets/module/content/_live-blog.scss
/* ... */
.blog {
    background-color: $c-neutral8;

    .content__headline {
        color: $c-neutral1;
        @include fs-headline(5);

        @include mq(tablet) {
            @include fs-headline(6, true);
        }

        @include mq(desktop) {
            padding-bottom: $gs-row-height + ($gs-baseline * 2);
        }
    }

    &.tone-live .content__head--tonal {
        .content__labels {
            @include mq(desktop) {
                float: left;
                width: gs-span(3);
                margin-left: (gs-span(4) + $gs-gutter) * -1;
                border-bottom: 0;
            }
        }

        .content__section-label {
            @include mq(desktop) {
                @include fs-header(3);
                float: none;
            }
        }

        .content__series-label {
            @include mq(desktop) {
                @include fs-headline(3);
                float: none;
            }
        }
    }

    .content__head__lower {
        padding-top: $gs-baseline/4;
        padding-bottom: 0;
        min-height: 54px;
    }

    .content__secondary-column {
        @include mq($until: wide) {
            display: none;
        }
    }

    .content__standfirst {
        @include fs-headline(2);
        color: $c-neutral2-contrasted;

        @include mq(rightCol) {
            padding-right: $gs-gutter;
        }
    }
}

@include mq(rightCol) {
    .blog__left-col {
        position: absolute;
        top: 0;
        z-index: 200;
        margin-left: ($right-column + $gs-gutter) * - 1;
        width: $right-column;
    }
}

.content--liveblog {
    .content__standfirst,
    .blog__timeline,
    .content__secondary-column {
        padding-top: $gs-baseline;
        @include mq(rightCol) {
            padding-top: $gs-baseline*2;
        }
    }
}

.content--liveblog.section-football .content__head--tonal { // Football overrides
    .tone-background {
        background-color: #ffffff;
    }
    .content__labels {
        border-bottom-color: $c-neutral5;
    }
    .content__section-label .tone-colour {
        color: $c-liveDefault;
    }
    .content__series-label .tone-colour {
        color: $c-neutral2;
    }
    .content__headline {
        color: $c-neutral1;
    }
}

.liveblog__show-more {
    background-color: colour(live-main-2);
    border: 0;
    margin-bottom: $gs-baseline;

    @include mq(leftCol) {
        margin-top: $gs-baseline;
        margin-bottom: 0;
    }

    &:hover,
    &:focus {
        background-color: darken(colour(live-main-2), 7%);
    }

    .i {
        width: 24px;
        height: 24px;
        margin: 6px 5px 0 -5px;
    }
}

